improved tabs, fixed scrollbar bug

--- a/style/style.css
+++ b/style/style.css
@@ -29,23 +29,31 @@ body{
   cursor: crosshair;
   box-shadow: 0px 0px 0px 1px #000000 inset;
 }
+/* tab that opens by default when the program loads */
+#default-open {
+
+}
 
 .tab {
   min-width: 50px;
-  max-width: 150px;
-  height: 30px;
+  max-width: 130px;
+  margin-left: 5px;
+  margin-right: 5px;
+  height: 26px;
+  margin-top: 4px;
   flex-grow: 1;
 }
 
 .tabcontent {
   display: none;
-  
 }
 
 .tablink {
   display: block;
-  box-shadow: 0px 0px 0px 1px #000000 inset;
+  /*box-shadow: 0px 0px 0px 1px #000000 inset;*/
   background-color: #80b3ff;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -53,12 +61,18 @@ body{
   text-decoration: none;
 }
 
+.active {
+  background-color: #99ccff;
+}
+
+
 .tab-area {
+  margin: 0px;
   list-style-type: none;
   display: flex;
   height: 30px;
   width: 100%;
   padding-left: 0px;
   background-color: #8080ff;
-  box-shadow: 0px 0px 0px 1px #000000 inset;
+  /*box-shadow: 0px 0px 0px 1px #000000 inset;*/
 }
